--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -778,6 +778,11 @@ div.social-it ul.socials li a {
 	background: url('images/favorite.png') no-repeat scroll 5px 50% transparent;
 }
 
+.socialit-twitter a {
+	padding-left: 26px;
+	background: url("images/tweet.png") no-repeat scroll 5px 50% transparent;
+}
+
 /* Profile Page
 =================================== */
 
