--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -107,6 +107,7 @@ img.avatar { border: 1px solid #ddd; }
 	font-weight: normal; 
 	font-family:"League Gothic","Lucida Grande",Tahoma,"Helvetica Neue",Arial,Helvetica,sans-serif;
 	font-size: 5em;
+	word-spacing: 0.1em;
 	}
 #header h1 a { text-decoration: none; }
 #header h1 a:hover { color: #400; }
