small login/reg links at top

--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -916,6 +916,11 @@ div.social-it ul.socials li.socialit-twitter a {
 /* Login, Register, Profile Edit
 =================================== */
 
+#util-login {
+	float: right;
+	color: #555;
+}
+
 #login-page fieldset,
 #register-page fieldset,
 #profile-page fieldset {
