--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -802,7 +802,7 @@ div.social-it ul.socials li a {
 
 div.social-it ul.socials li.socialit-twitter a {
 	padding-left: 26px;
-	background: url("images/tweet.png") no-repeat scroll 5px 50% transparent;
+	background: url("http://twitter-badges.s3.amazonaws.com/t_mini-a.png") no-repeat scroll 5px 50% transparent;
 	height: auto !important;
 }
 
@@ -919,6 +919,16 @@ div.social-it ul.socials li.socialit-twitter a {
 #util-login {
 	float: right;
 	color: #555;
+	padding: 4px 5px 5px;
+	background: #eee;
+	-webkit-border-radius: 0 0 4px 4px;
+	-moz-border-radius:    0 0 4px 4px;
+	-o-border-radius:      0 0 4px 4px;
+	-ms-border-radius:     0 0 4px 4px;
+	border-radius:         0 0 4px 4px;
+	border-bottom: 1px solid #aaa;
+	border-right: 1px solid #aaa;	
+	border-right: 1px solid #aaa;
 }
 
 #login-page fieldset,
