--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -750,6 +750,12 @@ a.rss-link {
 	margin-top: -8px;
 }
 
+#follow-us {
+	background:url("http://twitter-badges.s3.amazonaws.com/t_mini-a.png") no-repeat scroll 5px 50% transparent;
+	height:auto !important;
+	padding-left:26px;
+}
+
 #forumlist tr td div.nest {
 	padding-left: 2.5ex;
 }
