--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -361,7 +361,9 @@ form #register-link a:hover {
 
 #front-page #discussions ul { padding: 0 0 0 14px; }
 
-.sticky { background-color: #a1d29a; }
+.sticky { background-color: #ffd; }
+.sticky:hover { background-color: #ffc; }
+.sticky big { font-size: inherit; }
 
 /* Page navigation
 =================================== */
@@ -754,6 +756,13 @@ a.rss-link {
 	background:url("http://twitter-badges.s3.amazonaws.com/t_mini-a.png") no-repeat scroll 5px 50% transparent;
 	height:auto !important;
 	padding-left:26px;
+}
+
+#views {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	line-height: 1.5em;
 }
 
 #forumlist tr td div.nest {
