--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -318,7 +318,7 @@ form.login input#remember {
 	padding-bottom: 10px;
 }
 
-#front-page #main h2, #forum-page #main h2, h2.post-form, #userlogin, #currentfavorites, #register, #passwordrecovery {
+#front-page #main h2, #forum-page #main h2, h2.post-form, #userlogin, #currentfavorites, #register, #passwordrecovery, #userreg {
 	font-family: "League Gothic","Arial Narrow","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-weight: normal;
 	font-size: 3em;
