--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -346,8 +346,8 @@ form.login input#remember {
 #reg-or {
 	text-transform: lowercase;
 	font-variant: small-caps;
-	font-size: 14px;
-	padding: 5px;
+	margin-left: 200px;
+	color:#544;
 }
 
 #register-link {
