--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -113,8 +113,6 @@ img.avatar { border: 1px solid #ddd; }
 	font-family:"League Gothic","Lucida Grande",Tahoma,"Helvetica Neue",Arial,Helvetica,sans-serif;
 	font-size: 5em;
 	word-spacing: 0.1em;
-	height: 65px;
-	overflow: hidden;
 	}
 #header h1 a { text-decoration: none; }
 #header h1 a:hover { color: #400; }
@@ -950,14 +948,17 @@ div.social-it ul.socials li.socialit-twitter a {
 }
 
 #search-for { margin: 15px 0 5px; }
+ 
+ul#search-suggestions { margin-left: 25px; }
 
 .search-results { margin: 0 0 10px; }
-
 .search-results ol { margin: 5px 0 0 28px; }
+.search-results ol li { border-bottom: 1px solid #ccc; padding: 2px 5px 0 5px;  }
+.search-results ol li.alt { background-color: #f8f8f8; }
+.search-results ol li:hover { background-color: #e4f3e1; }
+.search-results ol li a.result { font-size: 15px; }
+.search-results ol li span.freshness { float: right; font-style: italic; }
 
-.search-results ol li { margin: 0 0 3px; }
-
-.search-results ol li a { display: block; font-size: 120%;}
 
 /* Login, Register, Profile Edit
 =================================== */
