--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -148,6 +148,11 @@ div.search input {
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	-webkit-background-clip: padding-box;
+	-webkit-box-shadow: 1px 1px 3px #bbb;
+	-moz-box-shadow:    1px 1px 3px #bbb;
+	-o-box-shadow:      1px 1px 3px #bbb;
+	-ms-box-shadow:     1px 1px 3px #bbb;
+	box-shadow:         1px 1px 3px #bbb;
 }
 
 #main {
@@ -213,11 +218,11 @@ div.search input {
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	-webkit-background-clip: padding-box;
-	-webkit-box-shadow: 1px 1px 3px #aaa;
-	-moz-box-shadow:    1px 1px 3px #aaa;
-	-o-box-shadow:      1px 1px 3px #aaa;
-	-ms-box-shadow:     1px 1px 3px #aaa;
-	box-shadow:         1px 1px 3px #aaa;
+	-webkit-box-shadow: 1px 1px 3px #bbb;
+	-moz-box-shadow:    1px 1px 3px #bbb;
+	-o-box-shadow:      1px 1px 3px #bbb;
+	-ms-box-shadow:     1px 1px 3px #bbb;
+	box-shadow:         1px 1px 3px #bbb;
 	}
 
 .header-button:hover {
